--- a/C# Web Basics/CustomSoftUniServer/SUS/Apps/MyFirstMvcApp/Views/Home/Index.html
+++ b/C# Web Basics/CustomSoftUniServer/SUS/Apps/MyFirstMvcApp/Views/Home/Index.html
@@ -1,5 +1,5 @@
 ﻿<div class="index-div bg-blur border border-white">
-    <h1>Welcome to Battle Cards</h1>
+    <h1>Welcome to Battle Cards @DateTime.UtcNow.Year </h1>
     <hr class="bg-primary w-75">
     <h3>On our platform you will create and collect game cards.</h3>
     <h3>
@@ -8,4 +8,4 @@
         <a class="text-primay" href="/Users/Register">Register</a>
         now and check our deals.
     </h3>
-</div>
+</div> 
