--- a/ASP.NET Core/MyRecipes/Web/MyRecipes.Web/Views/Home/Index.cshtml
+++ b/ASP.NET Core/MyRecipes/Web/MyRecipes.Web/Views/Home/Index.cshtml
@@ -4,13 +4,13 @@
     this.ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
     <h1 class="display-4">Welcome to @GlobalConstants.SystemName!</h1>
+<div class="col-md-6 offset-md-3">
 
     <p>We have:</p>
     <ul class="list-group"></ul>
-    <li class="list-group-item bg-white">Recipes: @Model.RecipesCount</li>
+    <li class="list-group-item bg-warning">Recipes: @Model.RecipesCount</li>
     <li class="list-group-item bg-white">Categories: @Model.CategoriesCount</li>
-    <li class="list-group-item bg-white">Images: @Model.ImagesCount</li>
+    <li class="list-group-item bg-warning">Images: @Model.ImagesCount</li>
     <li class="list-group-item bg-white">Ingredients: @Model.IngredientsCount</li>
 </div>
