Add new Data Model

--- a/ASP.NET Core/MyRecipes/Web/MyRecipes.Web/Views/Recipes/ById.cshtml
+++ b/ASP.NET Core/MyRecipes/Web/MyRecipes.Web/Views/Recipes/ById.cshtml
@@ -50,7 +50,7 @@
                         </div>
                         <div class="media-body space-sm">
                             <div class="feature-title">PREP TIME</div>
-                            <div class="feature-sub-title">@Model.PreparationTime.TotalMinutes Mins</div>
+                            <div class="feature-sub-title">@Model.PreparatingTime.TotalMinutes Mins</div>
                         </div>
                     </div>
                 </div>
