--- a/ASP.NET Core/MyRecipes/Web/MyRecipes.Web/Views/Recipes/ById.cshtml
+++ b/ASP.NET Core/MyRecipes/Web/MyRecipes.Web/Views/Recipes/ById.cshtml
@@ -1,4 +1,5 @@
-﻿@model MyRecipes.Web.ViewModels.Recipes.SingleRecipeViewModel
+﻿@using MyRecipes.Common;
+@model MyRecipes.Web.ViewModels.Recipes.SingleRecipeViewModel
 @{
     this.ViewData["Title"] = Model.Name;
 }
@@ -34,103 +35,109 @@
                         <li><span id="averageVoteValue">@Model.AverageVote.ToString("0.0")</span><span> / 5</span> </li>
                     </ul>
                 </li>
-            </ul>
+                @if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
+                {
+                <li class="single-meta">
+                    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-secondary">Edit</a>
+                </li>
+                }
+                </ul>
+            </div>
         </div>
-    </div>
-    <div class="item-figure">
-        <img class="img-fluid w-100" src="@Model.ImageUrl" alt="@Model.Name" />
-    </div>
-    <div class="item-feature">
-        <ul>
-            <li>
-                <div class="feature-wrap">
-                    <div class="media">
-                        <div class="feature-icon">
-                            <i class="far fa-clock"></i>
-                        </div>
-                        <div class="media-body space-sm">
-                            <div class="feature-title">PREP TIME</div>
-                            <div class="feature-sub-title">@Model.PreparatingTime.TotalMinutes Mins</div>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="feature-wrap">
-                    <div class="media">
-                        <div class="feature-icon">
-                            <i class="fas fa-utensils"></i>
-                        </div>
-                        <div class="media-body space-sm">
-                            <div class="feature-title">COOK TIME</div>
-                            <div class="feature-sub-title">@Model.CookingTime.TotalMinutes Mins</div>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="feature-wrap">
-                    <div class="media">
-                        <div class="feature-icon">
-                            <i class="fas fa-users"></i>
-                        </div>
-                        <div class="media-body space-sm">
-                            <div class="feature-title">SERVING</div>
-                            <div class="feature-sub-title">
-                                @Model.PortionsCount
-                                @if (Model.PortionsCount == 1)
-                                {
-                                    <span>Person</span>
-                                }
-                                else
-                                {
-                                    <span>People</span>
-                                }
+        <div class="item-figure">
+            <img class="img-fluid w-100" src="@Model.ImageUrl" alt="@Model.Name" />
+        </div>
+        <div class="item-feature">
+            <ul>
+                <li>
+                    <div class="feature-wrap">
+                        <div class="media">
+                            <div class="feature-icon">
+                                <i class="far fa-clock"></i>
+                            </div>
+                            <div class="media-body space-sm">
+                                <div class="feature-title">PREP TIME</div>
+                                <div class="feature-sub-title">@Model.PreparatingTime.TotalMinutes Mins</div>
                             </div>
                         </div>
                     </div>
-                </div>
-            </li>
-            <li>
-                <div class="feature-wrap">
-                    <div class="media">
-                        <div class="feature-icon">
-                            <i class="fa fa-list-ol"></i>
-                        </div>
-                        <div class="media-body space-sm">
-                            <div class="feature-title">CATEGORY RECIPES</div>
-                            <div class="feature-sub-title">@Model.CategoryRecipesCount</div>
+                </li>
+                <li>
+                    <div class="feature-wrap">
+                        <div class="media">
+                            <div class="feature-icon">
+                                <i class="fas fa-utensils"></i>
+                            </div>
+                            <div class="media-body space-sm">
+                                <div class="feature-title">COOK TIME</div>
+                                <div class="feature-sub-title">@Model.CookingTime.TotalMinutes Mins</div>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </li>
-        </ul>
-    </div>
-    <div class="making-elements-wrap">
-        <div class="row">
-            <div class="col-md-6">
-                <p class="item-description">
-                    @Model.Instructions
-                </p>
-            </div>
-            <div class="col-md-6">
-                <div class="ingridients-wrap">
-                    <h3 class="item-title"><i class="fas fa-list-ul"></i>Ingridients</h3>
-                    @foreach (var ingredient in Model.Ingredients)
-                    {
-                        <div class="checkbox checkbox-primary">
-                            <label for="checkbox1">@ingredient.Quantity @ingredient.IngredientName</label>
+                </li>
+                <li>
+                    <div class="feature-wrap">
+                        <div class="media">
+                            <div class="feature-icon">
+                                <i class="fas fa-users"></i>
+                            </div>
+                            <div class="media-body space-sm">
+                                <div class="feature-title">SERVING</div>
+                                <div class="feature-sub-title">
+                                    @Model.PortionsCount
+                                    @if (Model.PortionsCount == 1)
+                                    {
+                                        <span>Person</span>
+                                    }
+                                    else
+                                    {
+                                        <span>People</span>
+                                    }
+                                </div>
+                            </div>
                         </div>
-                    }
+                    </div>
+                </li>
+                <li>
+                    <div class="feature-wrap">
+                        <div class="media">
+                            <div class="feature-icon">
+                                <i class="fa fa-list-ol"></i>
+                            </div>
+                            <div class="media-body space-sm">
+                                <div class="feature-title">CATEGORY RECIPES</div>
+                                <div class="feature-sub-title">@Model.CategoryRecipesCount</div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="making-elements-wrap">
+            <div class="row">
+                <div class="col-md-6">
+                    <p class="item-description">
+                        @Model.Instructions
+                    </p>
+                </div>
+                <div class="col-md-6">
+                    <div class="ingridients-wrap">
+                        <h3 class="item-title"><i class="fas fa-list-ul"></i>Ingridients</h3>
+                        @foreach (var ingredient in Model.Ingredients)
+                        {
+                            <div class="checkbox checkbox-primary">
+                                <label for="checkbox1">@ingredient.Quantity @ingredient.IngredientName</label>
+                            </div>
+                        }
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
-<form method="post" id="antiForgeryForm"></form>
-@section Scripts {
-    <script>
+    <form method="post" id="antiForgeryForm"></form>
+    @section Scripts {
+        <script>
         $("li[data-vote]").each(function (el) {
             $(this).click(function () {
                 var value = $(this).attr("data-vote");
@@ -151,5 +158,5 @@
                 });
             })
         });
-    </script>
-} 
+        </script>
+    } 
