--- a/ASP.NET Core/MyRecipes/Web/MyRecipes.Web/Views/Recipes/Edit.cshtml
+++ b/ASP.NET Core/MyRecipes/Web/MyRecipes.Web/Views/Recipes/Edit.cshtml
@@ -1,14 +1,15 @@
 ﻿@model MyRecipes.Web.ViewModels.Recipes.EditRecipeInputModel
-@{ 
+@{
     ViewData["Title"] = "Edit recipe";
     var categoryItems = this.Model.CategoriesItems.Select(x => new SelectListItem(x.Value, x.Key));
-} 
+}
 
 <h1>@ViewData["Title"]</h1>
 
-<form method="post">
 
-    <div class="form-group">
+<form method="post" id="editForm">
+
+    <div class="form-group" id="edit">
         <label asp-for="Name"></label>
         <input asp-for="Name" class="form-control" />
         <span asp-validation-for="Name" class="text-danger"></span>
@@ -40,5 +41,29 @@
     </div>
     <hr />
     <input type="hidden" asp-for="Id" />
-    <input type="submit" class="btn btn-success" value="Save changes" />
 </form>
+
+<button type="submit" class="btn btn-success" data-toggle="modal" data-target="#modalEdit">Save changes</button>
+
+<!-- Modal -->
+<div class="modal" id="modalEdit" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Confirm edit</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>
+                    Do you confirm this changes?
+                </p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" onclick="edit.submit()">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
